Fix website on safari

--- a/src/app.css
+++ b/src/app.css
@@ -20,6 +20,7 @@ body {
 	margin: 0;
 	background-color: var(--background-color);
 	color: var(--text-color);
+	height: 100%;
 }
 
 a {
